Fix manual indexes cleanap for external elasticsearch

--- a/sources/elasticsearch-clear-indexes.yaml
+++ b/sources/elasticsearch-clear-indexes.yaml
@@ -31,6 +31,11 @@ spec:
                 configMapKeyRef:
                   name: docspace
                   key: MYSQL_DATABASE
+            - name: ELK_SHEME
+              valueFrom:
+                configMapKeyRef:
+                  name: docspace
+                  key: ELK_SHEME
             - name: ELK_HOST
               valueFrom:
                 configMapKeyRef:
@@ -66,6 +71,11 @@ data:
     -u "$MYSQL_USER" \
     -p"$MYSQL_PASSWORD" "$MYSQL_DATABASE" \
     -e "TRUNCATE webstudio_index;"
-    curl -XDELETE http://$ELK_HOST:$ELK_PORT/files_folder
-    curl -XDELETE http://$ELK_HOST:$ELK_PORT/files_file
+    if [[ "$ELK_SHEME" == "https" ]]; then
+      curl -XDELETE $ELK_SHEME://$ELK_HOST/files_folder
+      curl -XDELETE $ELK_SHEME://$ELK_HOST/files_file
+    else
+      curl -XDELETE $ELK_SHEME://$ELK_HOST:$ELK_PORT/files_folder
+      curl -XDELETE $ELK_SHEME://$ELK_HOST:$ELK_PORT/files_file
+    fi
     
