--- a/values.yaml
+++ b/values.yaml
@@ -114,6 +114,8 @@ connections:
   loginHost: login
   # connections.healthchecksHost The name of the DocSpace Healthchecks service
   healthchecksHost: healthchecks
+  # connections.dashboardsHost The name of the DocSpace Dashboards service
+  dashboardsHost: dashboards
   # connections.documentServerHost The name of the Document Server service
   documentServerHost: document-server
   # connections.documentServerUrlPublic The name of the Document Server service
