Update the docs installation instructions

--- a/templates/applications/document-server.yaml
+++ b/templates/applications/document-server.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.docs.enabled }}
+{{- if and .Values.docs.enabled (not .Values.connections.documentServerUrlExternal) }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
