--- a/templates/configmaps/router-init-scripts.yaml
+++ b/templates/configmaps/router-init-scripts.yaml
@@ -26,7 +26,9 @@ data:
     sed -i 's/$document_server/https\:\/\/{{ trimPrefix "https://" .Values.connections.documentServerHost }}/g' /etc/nginx/conf.d/onlyoffice.conf
     {{- else if contains "http://" .Values.connections.documentServerHost }}
     sed -i 's/$document_server/http\:\/\/{{ trimPrefix "http://" .Values.connections.documentServerHost }}/g' /etc/nginx/conf.d/onlyoffice.conf
-    {{- else if empty .Values.connections.documentServerHost }}
+    {{- else if and .Values.connections.documentServerUrlExternal (empty .Values.connections.documentServerHost) }}
+    sed -i 's/$document_server/{{ .Values.connections.documentServerUrlExternal | replace ":" "\\:" | replace "/" "\\/" }}/g' /etc/nginx/conf.d/onlyoffice.conf
+    {{- else if and (empty .Values.connections.documentServerUrlExternal) (empty .Values.connections.documentServerHost) }}
     {{- fail "You specified an empty value in the Document Server Host parameter!" }}
     {{- else }}
     sed -i 's/$document_server/http\:\/\/{{ .Values.connections.documentServerHost }}/g' /etc/nginx/conf.d/onlyoffice.conf
