--- a/values.yaml
+++ b/values.yaml
@@ -121,6 +121,7 @@ connections:
   documentServerHost: document-server
   # connections.documentServerUrlExternal The address of the external Document Server
   # If set, the local Document Server will not be installed
+  # The address must be in the `http(s)://<documentserver-address>/` format
   documentServerUrlExternal: ""
   # connections.appUrlPortal URL for DocSpace requests
   # By default, the name of the routing (Router) service and the port on which it accepts requests are used
