--- a/values.yaml
+++ b/values.yaml
@@ -1410,6 +1410,10 @@ backup:
   # backup.kind The controller used for deploy
   # Possible values are `Deployment` (default) or `StatefulSet`
   kind: Deployment
+  ## backup.annotations Defines annotations that will be additionally added to Backup deploy
+  ## If set to, it takes priority over the `commonAnnotations`
+  ## You can also use `tpl` as the value for the key
+  annotations: {}
   # backup.replicaCount Number of Backup replicas to deploy
   replicaCount: 2
   # Update strategy used to replace old Pods by new ones
@@ -1427,6 +1431,8 @@ backup:
   # Used if `backup.kind` is set to `StatefulSet`
   # ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#pod-management-policies
   podManagementPolicy: OrderedReady
+  ## backup.podAnnotations Map of annotations to add to the Backup pods
+  podAnnotations: {}
   # Configure a Security Context for the Backup Pods
   # If set to, it takes priority over the `podSecurityContext`
   podSecurityContext:
